Added basic permissions and room types
