# src/models/index.ts
@@ -1,5 +1,6 @@
+import * as permission from "./permission";
 import * as post from "./post";
 import * as room from "./room";
 import * as user from "./user";
 
-export { post, room, user };
+export { permission, post, room, user };
